--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.geosdi</groupId>
-    <artifactId>geosdi-geocoding</artifactId>
+    <artifactId>geosdi-geocoder</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
