--- a/geocoding-ws/pom.xml
+++ b/geocoding-ws/pom.xml
@@ -4,7 +4,7 @@
     
     <parent>
         <groupId>org.geosdi</groupId>
-        <artifactId>geosdi-geocoding</artifactId>
+        <artifactId>geosdi-geocoder</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     
