--- a/geocoder-core/geocoder-cache/pom.xml
+++ b/geocoder-core/geocoder-cache/pom.xml
@@ -5,21 +5,21 @@
     
     <parent>
         <groupId>org.geosdi</groupId>
-        <artifactId>geocoding-core</artifactId>
+        <artifactId>geocoder-core</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     
     <groupId>org.geosdi</groupId>
-    <artifactId>geocoding-cache</artifactId>
+    <artifactId>geocoder-cache</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Service :: == geoSDI Geocoding Cache</name>    
+    <name>Service :: == geoSDI Geocoder Cache</name>    
     
     <dependencies>
         
         <dependency>
             <groupId>org.geosdi</groupId>
-            <artifactId>geocoding-model</artifactId>
+            <artifactId>geocoder-model</artifactId>
             <version>${project.version}</version>
         </dependency>
         
@@ -53,7 +53,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
