--- a/geocoder-core/geocoder-model/pom.xml
+++ b/geocoder-core/geocoder-model/pom.xml
@@ -5,21 +5,20 @@
     
     <parent>
         <groupId>org.geosdi</groupId>
-        <artifactId>geocoding-core</artifactId>
+        <artifactId>geocoder-core</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     
     <groupId>org.geosdi</groupId>
-    <artifactId>geocoding-model</artifactId>
+    <artifactId>geocoder-model</artifactId>
     <version>1.0-SNAPSHOT</version>
     
-    <name>Service :: == geoSDI Geocoding Model</name>
+    <name>Service :: == geoSDI Geocoder Model</name>
     
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
