--- a/geocoder-core/pom.xml
+++ b/geocoder-core/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
     <parent>
         <groupId>org.geosdi</groupId>
         <artifactId>geosdi-geocoder</artifactId>
@@ -9,15 +8,14 @@
     </parent>
     
     <groupId>org.geosdi</groupId>
-    <artifactId>geocoding-ws</artifactId>
+    <artifactId>geocoder-core</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     
-    <name>Service :: == geoSDI Geocoding WS</name>
+    <name>Service :: == geoSDI Geocoder Core</name>
     
     <modules>
-        <module>geocoding-api</module>
-        <module>geocoding-impl</module>
-        <module>geocoding-webapp</module>
+        <module>geocoder-model</module>
+        <module>geocoder-cache</module>
     </modules>
 </project>
