--- a/geocoder-ws/geocoder-api/pom.xml
+++ b/geocoder-ws/geocoder-api/pom.xml
@@ -4,23 +4,21 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.geosdi</groupId>
-        <artifactId>geocoding-ws</artifactId>
+        <artifactId>geocoder-ws</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     
     <groupId>org.geosdi</groupId>
-    <artifactId>geocoding-api</artifactId>
+    <artifactId>geocoder-api</artifactId>
     <version>1.0-SNAPSHOT</version>
     
-    <name>Service :: == geoSDI Geocoding API</name>
+    <name>Service :: == geoSDI Geocoder API</name>
     
-    
-
     <dependencies>
                 
         <dependency>
             <groupId>org.geosdi</groupId>
-            <artifactId>geocoding-cache</artifactId>
+            <artifactId>geocoder-cache</artifactId>
             <version>${project.version}</version>
         </dependency>
         
@@ -75,7 +73,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
