--- a/geocoder-ws/geocoder-impl/pom.xml
+++ b/geocoder-ws/geocoder-impl/pom.xml
@@ -5,20 +5,20 @@
     
     <parent>
         <groupId>org.geosdi</groupId>
-        <artifactId>geocoding-ws</artifactId>
+        <artifactId>geocoder-ws</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.geosdi</groupId>
-    <artifactId>geocoding-impl</artifactId>
+    <artifactId>geocoder-impl</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Service :: == geoSDI Geocoding Impl</name>
+    <name>Service :: == geoSDI Geocoder Impl</name>
 
     <dependencies>
         <dependency>
             <groupId>org.geosdi</groupId>
-            <artifactId>geocoding-api</artifactId>
+            <artifactId>geocoder-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         
@@ -105,7 +105,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
