Fixed mapping issues

--- a/geocoder-core/geocoder-cache/src/main/resources/elasticsearch.yml
+++ b/geocoder-core/geocoder-cache/src/main/resources/elasticsearch.yml
@@ -1,4 +1,5 @@
 cluster.name: elasticsearch
 network.host: localhost
 network.transport.tcp.port: 9300
-#es.nodes: Mauler
+node.name: AndyPower
+discovery.zen.ping.multicast.enabled: true
