--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.7</java.version>
         <junit-version>4.11</junit-version>
-        <geoplatform-version>1.6-SNAPSHOT</geoplatform-version>
-        <jts-version>1.13</jts-version>
-        <jra-version>1.0-alpha-4</jra-version>
-        <xerces-version>2.11.0</xerces-version>
-        <batik-ext-version>1.7</batik-ext-version>
-        <xmlbeans-version>2.6.0</xmlbeans-version>
-        <jettison-version>1.3.6</jettison-version>
+        <geoplatform-version>1.7-SNAPSHOT</geoplatform-version>
         <guava-version>18.0</guava-version>
         <elasticsearch-version>1.4.1</elasticsearch-version>
-        <google-maps-services-version>0.1.3</google-maps-services-version>
-        
-        <jetty-version>8.1.16.v20140903</jetty-version>
-        <cargo-version>1.4.10</cargo-version>
+        <google-maps-services-version>0.1.4</google-maps-services-version>
     </properties>
 
     <pluginRepositories>
@@ -89,6 +80,14 @@
             </dependency>
             
             <dependency>
+                <groupId>org.geosdi</groupId>
+                <artifactId>geoplatform-jackson-dependency</artifactId>
+                <type>pom</type>
+                <scope>import</scope>
+                <version>${geoplatform-version}</version>
+            </dependency>
+            
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit-version}</version>
@@ -104,16 +103,6 @@
         
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
-                    <configuration>
-                        <encoding>utf8</encoding>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
-                    </configuration>
-                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -156,6 +145,19 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <encoding>utf8</encoding>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
         
         <extensions>
             <extension>
